--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0.64", features = ["full", "visit-mut"] }
 synstructure = "0.13.1"
-salsa = { git = "https://github.com/davidbarsky/salsa.git", rev = "d609b9ba7c61a1ed7c09142fa5ded6e0ceddb174" }
-# salsa = { path = "../salsa" }
+salsa = { git = "https://github.com/davidbarsky/salsa.git", branch = "davidbarsky/add-interned-sans-lifetime-macro" }
 
 [dev-dependencies]
 expect-test = "1.5.0"
